--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.12",
+    "@angular/fire": "^7.6.1",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.3.12",
     "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
+    "firebase": "^10.0.0",
+    "ng2-charts": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
-    "@angular/cli": "~17.3.11",
+    "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.12",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
